T6/target/generated-sources/antlr4/UaiLangParser.java
// Generated from UaiLang.g4 by ANTLR 4.13.1

package br.com.compiladores.uailang;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UaiLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		UAI=1, CABOU=2, TREM=3, ESCUITA=4, MOSTRA=5, SE=6, ENTAO=7, SENAO=8, FIMSE=9, 
		ENQUANTO=10, FAZ=11, FIMENQUANTO=12, PRA=13, DE=14, ATE=15, FIMPRA=16, 
		INTEIRO=17, REAL=18, TEXTO=19, LOGICO=20, VERDADE=21, MENTIRA=22, E=23, 
		OU=24, NAO=25, IGUAL_IGUAL=26, DIFERENTE=27, MENOR_IGUAL=28, MAIOR_IGUAL=29, 
		IGUAL=30, MENOR=31, MAIOR=32, MAIS=33, MENOS=34, VEZES=35, DIVIDIDO=36, 
		RESTO=37, ABRE_PAR=38, FECHA_PAR=39, DOIS_PONTOS=40, VIRGULA=41, PONTO=42, 
		NUM_REAL=43, NUM_INT=44, TEXTO_LITERAL=45, IDENT=46, COMENTARIO=47, WS=48;
	public static final int
		RULE_programa = 0, RULE_comando = 1, RULE_declaracao = 2, RULE_atribuicao = 3, 
		RULE_leitura = 4, RULE_escrita = 5, RULE_condicional = 6, RULE_repeticaoEnquanto = 7, 
		RULE_repeticaoPara = 8, RULE_tipo = 9, RULE_expressao = 10, RULE_ouExpr = 11, 
		RULE_eExpr = 12, RULE_igualdadeExpr = 13, RULE_relExpr = 14, RULE_adExpr = 15, 
		RULE_multExpr = 16, RULE_unExpr = 17, RULE_primario = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "comando", "declaracao", "atribuicao", "leitura", "escrita", 
			"condicional", "repeticaoEnquanto", "repeticaoPara", "tipo", "expressao", 
			"ouExpr", "eExpr", "igualdadeExpr", "relExpr", "adExpr", "multExpr", 
			"unExpr", "primario"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'uai'", "'cabou'", "'trem'", "'escuita'", "'mostra'", "'se'", 
			"'entao'", "'senao'", "'fimse'", "'int\\u00E9'", "'faz'", "'prontim'", 
			"'pra'", "'de'", "'ate'", "'fimpra'", "'inteiro'", "'real'", "'texto'", 
			"'logico'", "'verdade'", "'mentira'", "'e'", "'ou'", "'nao'", "'=='", 
			"'!='", "'<='", "'>='", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'('", "')'", "':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "UAI", "CABOU", "TREM", "ESCUITA", "MOSTRA", "SE", "ENTAO", "SENAO", 
			"FIMSE", "ENQUANTO", "FAZ", "FIMENQUANTO", "PRA", "DE", "ATE", "FIMPRA", 
			"INTEIRO", "REAL", "TEXTO", "LOGICO", "VERDADE", "MENTIRA", "E", "OU", 
			"NAO", "IGUAL_IGUAL", "DIFERENTE", "MENOR_IGUAL", "MAIOR_IGUAL", "IGUAL", 
			"MENOR", "MAIOR", "MAIS", "MENOS", "VEZES", "DIVIDIDO", "RESTO", "ABRE_PAR", 
			"FECHA_PAR", "DOIS_PONTOS", "VIRGULA", "PONTO", "NUM_REAL", "NUM_INT", 
			"TEXTO_LITERAL", "IDENT", "COMENTARIO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UaiLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UaiLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode UAI() { return getToken(UaiLangParser.UAI, 0); }
		public TerminalNode IDENT() { return getToken(UaiLangParser.IDENT, 0); }
		public TerminalNode CABOU() { return getToken(UaiLangParser.CABOU, 0); }
		public TerminalNode EOF() { return getToken(UaiLangParser.EOF, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(UAI);
			setState(39);
			match(IDENT);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744187000L) != 0)) {
				{
				{
				setState(40);
				comando();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(CABOU);
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public DeclaracaoContext declaracao() {
			return getRuleContext(DeclaracaoContext.class,0);
		}
		public TerminalNode PONTO() { return getToken(UaiLangParser.PONTO, 0); }
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public LeituraContext leitura() {
			return getRuleContext(LeituraContext.class,0);
		}
		public EscritaContext escrita() {
			return getRuleContext(EscritaContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public RepeticaoEnquantoContext repeticaoEnquanto() {
			return getRuleContext(RepeticaoEnquantoContext.class,0);
		}
		public RepeticaoParaContext repeticaoPara() {
			return getRuleContext(RepeticaoParaContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitComando(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitComando(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comando);
		try {
			setState(64);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TREM:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				declaracao();
				setState(50);
				match(PONTO);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				atribuicao();
				setState(53);
				match(PONTO);
				}
				break;
			case ESCUITA:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				leitura();
				setState(56);
				match(PONTO);
				}
				break;
			case MOSTRA:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				escrita();
				setState(59);
				match(PONTO);
				}
				break;
			case SE:
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				condicional();
				}
				break;
			case ENQUANTO:
				enterOuterAlt(_localctx, 6);
				{
				setState(62);
				repeticaoEnquanto();
				}
				break;
			case PRA:
				enterOuterAlt(_localctx, 7);
				{
				setState(63);
				repeticaoPara();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoContext extends ParserRuleContext {
		public TerminalNode TREM() { return getToken(UaiLangParser.TREM, 0); }
		public TerminalNode IDENT() { return getToken(UaiLangParser.IDENT, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(UaiLangParser.DOIS_PONTOS, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode IGUAL() { return getToken(UaiLangParser.IGUAL, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(TREM);
			setState(67);
			match(IDENT);
			setState(68);
			match(DOIS_PONTOS);
			setState(69);
			tipo();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(70);
				match(IGUAL);
				setState(71);
				expressao();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(UaiLangParser.IDENT, 0); }
		public TerminalNode IGUAL() { return getToken(UaiLangParser.IGUAL, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitAtribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitAtribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(IDENT);
			setState(75);
			match(IGUAL);
			setState(76);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LeituraContext extends ParserRuleContext {
		public TerminalNode ESCUITA() { return getToken(UaiLangParser.ESCUITA, 0); }
		public TerminalNode IDENT() { return getToken(UaiLangParser.IDENT, 0); }
		public LeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitLeitura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitLeitura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LeituraContext leitura() throws RecognitionException {
		LeituraContext _localctx = new LeituraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_leitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ESCUITA);
			setState(79);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EscritaContext extends ParserRuleContext {
		public TerminalNode MOSTRA() { return getToken(UaiLangParser.MOSTRA, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(UaiLangParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(UaiLangParser.VIRGULA, i);
		}
		public EscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_escrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitEscrita(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitEscrita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EscritaContext escrita() throws RecognitionException {
		EscritaContext _localctx = new EscritaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_escrita);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(MOSTRA);
			setState(82);
			expressao();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(83);
				match(VIRGULA);
				setState(84);
				expressao();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondicionalContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(UaiLangParser.SE, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode ENTAO() { return getToken(UaiLangParser.ENTAO, 0); }
		public TerminalNode FIMSE() { return getToken(UaiLangParser.FIMSE, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public TerminalNode SENAO() { return getToken(UaiLangParser.SENAO, 0); }
		public TerminalNode PONTO() { return getToken(UaiLangParser.PONTO, 0); }
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(SE);
			setState(91);
			expressao();
			setState(92);
			match(ENTAO);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744187000L) != 0)) {
				{
				{
				setState(93);
				comando();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(99);
				match(SENAO);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744187000L) != 0)) {
					{
					{
					setState(100);
					comando();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(108);
			match(FIMSE);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PONTO) {
				{
				setState(109);
				match(PONTO);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepeticaoEnquantoContext extends ParserRuleContext {
		public TerminalNode ENQUANTO() { return getToken(UaiLangParser.ENQUANTO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode FAZ() { return getToken(UaiLangParser.FAZ, 0); }
		public TerminalNode FIMENQUANTO() { return getToken(UaiLangParser.FIMENQUANTO, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public TerminalNode PONTO() { return getToken(UaiLangParser.PONTO, 0); }
		public RepeticaoEnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeticaoEnquanto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterRepeticaoEnquanto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitRepeticaoEnquanto(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitRepeticaoEnquanto(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeticaoEnquantoContext repeticaoEnquanto() throws RecognitionException {
		RepeticaoEnquantoContext _localctx = new RepeticaoEnquantoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repeticaoEnquanto);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ENQUANTO);
			setState(113);
			expressao();
			setState(114);
			match(FAZ);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744187000L) != 0)) {
				{
				{
				setState(115);
				comando();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(FIMENQUANTO);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PONTO) {
				{
				setState(122);
				match(PONTO);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RepeticaoParaContext extends ParserRuleContext {
		public TerminalNode PRA() { return getToken(UaiLangParser.PRA, 0); }
		public TerminalNode IDENT() { return getToken(UaiLangParser.IDENT, 0); }
		public TerminalNode DE() { return getToken(UaiLangParser.DE, 0); }
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public TerminalNode ATE() { return getToken(UaiLangParser.ATE, 0); }
		public TerminalNode FAZ() { return getToken(UaiLangParser.FAZ, 0); }
		public TerminalNode FIMPRA() { return getToken(UaiLangParser.FIMPRA, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public TerminalNode PONTO() { return getToken(UaiLangParser.PONTO, 0); }
		public RepeticaoParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeticaoPara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterRepeticaoPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitRepeticaoPara(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitRepeticaoPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeticaoParaContext repeticaoPara() throws RecognitionException {
		RepeticaoParaContext _localctx = new RepeticaoParaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_repeticaoPara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(PRA);
			setState(126);
			match(IDENT);
			setState(127);
			match(DE);
			setState(128);
			expressao();
			setState(129);
			match(ATE);
			setState(130);
			expressao();
			setState(131);
			match(FAZ);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744187000L) != 0)) {
				{
				{
				setState(132);
				comando();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(FIMPRA);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PONTO) {
				{
				setState(139);
				match(PONTO);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INTEIRO() { return getToken(UaiLangParser.INTEIRO, 0); }
		public TerminalNode REAL() { return getToken(UaiLangParser.REAL, 0); }
		public TerminalNode TEXTO() { return getToken(UaiLangParser.TEXTO, 0); }
		public TerminalNode LOGICO() { return getToken(UaiLangParser.LOGICO, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UaiLangListener ) ((UaiLangListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UaiLangVisitor ) return ((UaiLangVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
